# ra-backend

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-05d2372824ca43ce23496b530702657421761f9e73da2c123249266c1b7cb8f1.json  query-10184f5842c69669a355f766091b1938835b2d78c7ce02351eb8c44e225c3de4.json  query-29de6f964baea3f0b45d69fcdeac9fab4ac5c754420c2ddc75ef87dc9b6fb3bb.json  query-4c1eafefa24b3c0151622676ab3c71a8e70dff210788f44463370ab5c3a11da8.json  query-7aa60ffac11531107d3730cc71aed64657d5a08ef081290ea14eb2a0a6c484de.json  query-88dd695e504768a3cab2912b7751389d2390f8a422a5c9c185fd7015b3e5fe7b.json  query-8db29247b346608137ee92815aa72f881fe774865948aa68a6983f385f3499f4.json  query-95337afac5015be97d954c2916c051a137357570aa05b5aa42478c31511f73f7.json  query-b1dfe3e37ec30e4fb1f29633241a0353ed2d18835eaef5176fc537a186e7e413.json  query-b8c8679023b0eb5cf12338cfab639b7e9afc0ce0211c05c131f39f7f593697c9.json  query-c2d8b9b4cf5cb4db6b2a432f6a559d61cbb7f086f6487926cabfbb7efb904598.json  query-d013729cd82eef32eb8e8aee578526a30903a7dfc5c43e971482517ddf2d6a1c.json  query-d91248a462d08be971b7ff1f09d7efaec47fc869967eae49c64ae0782f02fcf9.json
migrations/: 20250309142951_users.down.sql  20250309142951_users.up.sql  20250309144638_resumes.down.sql  20250309144638_resumes.up.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/models/: mod.rs  resume.rs  users.rs
src/routes/: auth.rs  mod.rs  resumes.rs  users.rs
src/services/: database.rs  middleware.rs  mod.rs  nlp.rs
(+5 files in other folders)
