[package]
name = "ra-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.87"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
bytes = "1.10.1"
cargo-watch = "8.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
time = "0.3.39"
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive", "validator_derive"] }
